tests/parse_print/random_perturb/set01/delete-04/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-04/delete-04.essence line 3, column 1:
unexpected :
    line 3, column 1
    find  : set (size 2) of int(1..3)
    ^^^^^^^